--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     <div id="footer">
       <div class="container">
         <p class="text-muted credit">
-          All rights reserved <script>document.write((new Date()).getFullYear())</script> <a href="http://daiech.com">Daiech.com</a>
+            <a href="http://daiech.com">Daiech.com</a> <script>document.write((new Date()).getFullYear())</script>
         </p>
       </div>
     </div>
