--- a/templates/top_bar.html
+++ b/templates/top_bar.html
@@ -11,7 +11,7 @@
       {% if user.is_authenticated %}
       <ul class="nav navbar-nav">
           <li class="dropdown">
-              <a href="#" id="menu-admin" role="button" class="dropdown-toggle" data-toggle="dropdown">Crear publicaci&oacute;n</a>
+              <a href="/admin/blog/post/add" id="menu-admin" role="button">Crear publicaci&oacute;n</a>
           </li>
       </ul>
       {% endif %}
